--- a/package.json
+++ b/package.json
@@ -20,9 +20,8 @@
     "@angular/router": "^18.2.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
-    "primeflex": "^3.3.1",
+    "cors": "^2.8.5",
     "primeicons": "^7.0.0",
-    "primeng": "^17.18.11",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.4",
     "tslib": "^2.3.0",
